--- a/hyprland.conf
+++ b/hyprland.conf
@@ -23,7 +23,9 @@ workspace=2, monitor:HDMI-A-1
 $terminal = kitty
 
 # Execute your favorite apps at launch
-exec-once = 
+
+exec-once = $terminal
+exec-once = hyprpaper
 
 # Some default env vars.
 env = WLR_NO_HARDWARE_CURSORS,1 # fix invisible cursor on nvidia
